# RobotExample

./: .gitignore  .ignore~  CMakeLists.txt  main.cpp  readme.md
cmake/: FindAubo.cmake  FindFreenect.cmake  FindOpenCV.cmake  FindQt.cmake  FindRobWork.cmake
example/: AuboSdkExample.cpp  AuboSdkExample.h  conveyortrackexample.cpp  conveyortrackexample.h  example.pri  example_0.cpp  example_0.h  example_1.cpp  example_1.h  example_3.cpp  example_3.h  example_4.cpp  example_4.h  example_5.cpp  example_5.h  example_6.cpp  example_6.h  example_8.cpp  example_8.h  example_9.cpp  example_9.h  example_toolio.cpp  example_toolio.h  interfaceboarddemo.cpp  interfaceboarddemo.h  robottooliotestdemo.cpp  robottooliotestdemo.h  test.cpp  test.h  util.cpp  util.h
src/: 01_TestRobotSDK.cpp  02_TestDoubleRobot.cpp  03_TestCamera2Base.cpp  04_VerifyCalibration.cpp  05_DetectSquare.cpp  06_AutoGrab.cpp  07_test_paw.cpp  08_Painter.cpp  10_RobWork.cpp  11_DrawCircle.cpp  12_AutoGrab.cpp  CMakeLists.txt  Robot.cpp  Robot.h  TestDoubleRobot备份.cpp
src/paw/: Paw.cpp  Paw.h  rs232.cpp  rs232.h
src/utils/: 03_Camera2Base.h  05_DetectSquare.h  RPYUtils.h
